fixed spacing for desktop view

--- a/style.css
+++ b/style.css
@@ -174,5 +174,6 @@ button[data-icon="shopping-cart"]::before {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    padding: 32px;
   }
 }
